force-app/main/default/objects/Drug_Program__c/Drug_Program__c.object-meta.xml
<CustomObject>
    <label>Drug Program</label>
    <pluralLabel>Drug Programs</pluralLabel>
    <nameField><label>Drug Program Name</label><type>AutoNumber</type><displayFormat>DP-{0000}</displayFormat></nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>