force-app/main/default/objects/Drug_Program__c/fields/CareProgram__c.field-meta.xml
<CustomField>
    <fullName>CareProgram__c</fullName><label>Care Program</label><type>Lookup</type>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Drug Programs</relationshipLabel>
    <relationshipName>Drug_Programs</relationshipName>
    <required>true</required>
</CustomField>