force-app/main/default/objects/Drug_Program__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Drug Programs</relationshipLabel>
    <relationshipName>Drug_Programs</relationshipName>
    <required>true</required>
</CustomField>